--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,20 @@ spring.datasource.password=root
 #spring datajpa
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-
+#??????sms
+aliyun.sms.accessKeyId=
+aliyun.sms.accessKeySecret=
+aliyun.sms.template_code=
+aliyun.sms.sign_name=
+#OSS
+aliyun.oss.endpoint=
+aliyun.oss.bucketname=
+aliyun.oss.keyid=
+aliyun.oss.keysecret=
+aliyun.oss.filehost=
+#rabbitMQ
+spring.rabbitmq.host=
 
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+spring.redis.timeout=10000
