--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.mode=HTML5
 
-#邮箱
+#??
 spring.mail.host=
 spring.mail.username=
 spring.mail.password=
 spring.mail.default-encoding=UTF-8
 
-#数据库
+#jdbc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/travel?characterEncoding=utf-8&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
@@ -32,7 +32,7 @@ aliyun.oss.keysecret=
 aliyun.oss.filehost=
 #rabbitMQ
 spring.rabbitmq.host=
-
+#redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.timeout=10000
