--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.password=root
 #spring datajpa
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-#??????sms
+#sms
 aliyun.sms.accessKeyId=
 aliyun.sms.accessKeySecret=
 aliyun.sms.template_code=
